fix: intro width overflows

--- a/themes/saladict/source/css/_components/_intro.scss
+++ b/themes/saladict/source/css/_components/_intro.scss
@@ -1,6 +1,6 @@
 .intro {
   @media screen and (min-width: $tablet) {
-    min-height: 100vh;
+    min-height: 90vh;
     display: flex;
     align-items: center;
   }
